--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-The Free Unix Spectrum Emulator (Fuse) 1.2.1
+The Free Unix Spectrum Emulator (Fuse) 1.2.2
 ============================================
 
 Fuse (the Free Unix Spectrum Emulator) was originally, and somewhat
@@ -108,6 +108,6 @@ Usenet newsgroup `comp.sys.sinclair' or the World of Spectrum forums
 <http://www.worldofspectrum.org/forums/>.
 
 Philip Kendall <philip-fuse@shadowmagic.org.uk>
-17th July, 2016
+21st August, 2016
 
 $Id$
