--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5392,14 +5392,20 @@
          edge flag set (Fred).
 20160812 Makefile.am,configure.ac,m4/libxml.m4: use pkg-config to detect libpng
          and libxml2 (more from patch #375) (Alberto Garcia).
+20160816 ChangeLog,README,configure.ac,man/fuse.1: bump versions to 1.2.2(-pre1)
+         (Fred).
 20160816 man/fuse.1,peripherals/{Makefile.am,disk/{disk.[ch],trdos.[ch]}}:
          insert a boot loader in TRD/SCL disk images when autoload is enabled
          (part of feature request #90) (thanks, windale, BogDan and Fred)
+         (Sergio).
+20160817 ChangeLog: tweak zip support description (disks are not supported)
          (Sergio).
 20160817 man/fuse.1: document zip compression support (Sergio).
 20160817 ui/gtk/fileselector.c: add ".png" to the file filters in save file
          dialogs and check the support for ".svg" files (Sergio).
 20160820 ui/options.dat: fix mnemonics in drives setup to avoid collisions
          (Sergio).
+20160821 ChangeLog,README,configure.ac,man/fuse.1: update release dates and mark
+         this release as 1.2.2 (Fred).
 20160822 configure.ac: print summary of enabled features when building fuse
          (patch #378) (Alberto Garcia).
