--- a/man/fuse.1
+++ b/man/fuse.1
@@ -23,7 +23,7 @@
 .\" E-mail: philip-fuse@shadowmagic.org.uk
 .\"
 .\"
-.TH fuse 1 "17th July, 2016" "Version 1.2.1" "Emulators"
+.TH fuse 1 "21st August, 2016" "Version 1.2.2" "Emulators"
 .\"
 .\"------------------------------------------------------------------
 .\"
