--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5416,3 +5416,4 @@
          (Sergio).
 20160823 ui/win32/options.pl: set the length of text entry widgets on win32 UI
          (Sergio).
+20160823 display.c,peripherals/disk/upd_fdc.c: fix compilation warnings (Phil).
