--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5417,3 +5417,5 @@
 20160823 ui/win32/options.pl: set the length of text entry widgets on win32 UI
          (Sergio).
 20160823 display.c,peripherals/disk/upd_fdc.c: fix compilation warnings (Phil).
+20160823 input.[ch],keysyms.dat,keysyms.pl: integrate initial Recreated ZX
+         Spectrum patch (Sergio and ekkehard).
