--- a/man/fuse.1
+++ b/man/fuse.1
@@ -961,6 +961,15 @@ option.
 Specify an RZX file to begin recording to.
 .RE
 .PP
+.B \-\-recreated\-spectrum
+.RS
+Enable the use of a Recreated ZX Spectrum. This is a bluetooh keyboard
+that can be connected to the device where Fuse is running. The same as
+the General Options dialog's
+.I "Recreated ZX Spectrum"
+option.
+.RE
+.PP
 .B \-\-rom\-16
 .I file
 .br
@@ -2115,6 +2124,12 @@ Early versions of the Spectrum used a different value for unused bits
 on the keyboard input ports, and a few games depended on the old value
 of these bits. Enabling this option switches to the old value, to let
 you run them.
+.RE
+.PP
+.I "Recreated ZX Spectrum"
+.RS
+Enable the use of a Recreated ZX Spectrum. This is a bluetooh keyboard
+that can be connected to the device where Fuse is running.
 .RE
 .PP
 .I "Allow writes to ROM"
