--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5422,3 +5422,5 @@
 20160823 input.c,keysyms.dat: remove unused code (Phil).
 20160825 input.c,man/fuse.1,settings.dat,ui/options.dat: add option to enable
          the support of Recreated ZX Spectrum (Sergio).
+20160825 keysyms.pl: support (hopefully) Recreated ZX Spectrum on win32 UI
+         (Sergio).
