--- a/man/fuse.1
+++ b/man/fuse.1
@@ -963,8 +963,8 @@ Specify an RZX file to begin recording to.
 .PP
 .B \-\-recreated\-spectrum
 .RS
-Enable the use of a Recreated ZX Spectrum. This is a bluetooh keyboard
-that can be connected to the device where Fuse is running. The same as
+Enable the use of a Recreated ZX Spectrum. This is a Bluetooth keyboard
+that can be paired to the device where Fuse is running. The same as
 the General Options dialog's
 .I "Recreated ZX Spectrum"
 option.
@@ -2128,8 +2128,8 @@ you run them.
 .PP
 .I "Recreated ZX Spectrum"
 .RS
-Enable the use of a Recreated ZX Spectrum. This is a bluetooh keyboard
-that can be connected to the device where Fuse is running.
+Enable the use of a Recreated ZX Spectrum. This is a Bluetooth keyboard
+that can be paired to the device where Fuse is running.
 .RE
 .PP
 .I "Allow writes to ROM"
