Update shell completion with Recreated ZX Spectrum option.
Legacy-ID: 5796

--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5425,3 +5425,5 @@
 20160825 keysyms.pl: support (hopefully) Recreated ZX Spectrum on win32 UI
          (Sergio).
 20160909 man/fuse.1: fix typos in Recreated ZX Spectrum option (Sergio).
+20160909 data/shell-completion/bash/fuse: update shell completion with Recreated
+         ZX Spectrum option (Sergio).
