--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5437,3 +5437,5 @@
 20160911 keyboard.c,keysyms.pl,ui/win32/{win32internals.h,win32keyboard.c,
          win32ui.c}: map non-alphanumeric keys to appropriate spectrum
          characters on win32 UI (fixes bug #361) (thanks, Lee Tonks) (Sergio).
+20160911 keysyms.pl: detect more non-alphanumeric keys on win32 UI (more from
+         patches #358) (thanks, thrice) (Sergio).
