--- a/man/fuse.1
+++ b/man/fuse.1
@@ -1104,6 +1104,8 @@ the four ROMs for the +2A
 .RI ( plus3\-0.rom ", " plus3\-1.rom ", " plus3\-2.rom " and " plus3\-3.rom ),
 the four ROMs for the +3
 .RI ( plus3\-0.rom ", " plus3\-1.rom ", " plus3\-2.rom " and " plus3\-3.rom ),
+the four enhanced ROMs for the +3e
+.RI ( plus3e\-0.rom ", " plus3e\-1.rom ", " plus3e\-2.rom " and " plus3e\-3.rom ),
 the TC2048 ROM
 .RI ( tc2048.rom ),
 the two ROMs for the TC2068
