Reset machine when auto-loading TRD/SCL disks (fixes bug #358) (thanks, BogDan Vatra and Fred).
Legacy-ID: 5802

--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5440,3 +5440,5 @@
 20160911 keysyms.pl: detect more non-alphanumeric keys on win32 UI (more from
          patches #358) (thanks, thrice) (Sergio).
 20160920 man/fuse.1,plus3e-[012].rom: update to v1.43 of the +3e ROMs (Sergio).
+20160920 peripherals/disk/beta.c: reset machine when auto-loading TRD/SCL disks
+         (fixes bug #358) (thanks, BogDan Vatra and Fred) (Sergio).
