--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2016-11-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2016-11-05  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.3.1 released.
 
