Elaborate on Recreated ZX Spectrum support

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -974,9 +974,9 @@ Specify an RZX file to begin recording to.
 .PP
 .B \-\-recreated\-spectrum
 .RS
-Enable the use of a Recreated ZX Spectrum. This is a Bluetooth keyboard
-that can be paired to the device where Fuse is running. The same as
-the General Options dialog's
+Enable the use of a Recreated ZX Spectrum in `Layer A' (game) mode. This is a
+Bluetooth keyboard that can be paired to the device where Fuse is running. The
+same as the General Options dialog's
 .I "Recreated ZX Spectrum"
 option.
 .RE
@@ -2141,8 +2141,9 @@ you run them.
 .PP
 .I "Recreated ZX Spectrum"
 .RS
-Enable the use of a Recreated ZX Spectrum. This is a Bluetooth keyboard
-that can be paired to the device where Fuse is running.
+Enable the use of a Recreated ZX Spectrum in `Layer A' (game) mode. This
+is a Bluetooth keyboard that can be paired to the device where Fuse is
+running.
 .RE
 .PP
 .I "Use shift with arrow keys"
