Fix typo and acknowledgement

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,9 +11,9 @@
         * Miscellaneous improvements:
           * WidgetUI: Fix order of Z80 flags in debugger (thanks, Marcos
             Cruz) (Sergio Baldoví).
-          * Win32: Limit sound generation to 50% to 300% to work around bugs in
-            the DirectSound driver (thanks, windale and Sergio Baldoví)
-            (Fredrick Meunier).
+          * Win32: Limit sound generation from 50% to 300% to work around bugs
+            in the DirectSound driver (thanks, windale and Lee Tonks) (Fredrick
+            Meunier).
           * Various minor bugfixes.
 
 2016-11-05  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
