--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2016-12-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2016-12-05  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.3.2 released.
 
