--- a/z80/tests/README
+++ b/z80/tests/README
@@ -51,7 +51,7 @@ the initial setup. Same format as for .in files.
 Why some specific tests are here
 ================================
 
-32_1: check MEMPTR is set correctly after LD (nnnn),A.
+{0a,32}_1: check MEMPTR is set correctly after various instructions.
 
 37_{1,2,3}: check the behaviour of SCF with respect to bits 3 and 5
 	    (bug fixed on 20040225).
