Add reference to debugger support for MEMPTR.

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -4711,7 +4711,8 @@ z80:
 .I register name
 .RS
 The value of the specified register. Both 8-bit registers and 16-bit
-register pairs are supported.
+register pairs are supported. The MEMPTR / WZ hidden register is also
+supported.
 .RE
 z80:im
 .RS
