--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2017-01-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2017-01-31  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.3.3 released.
 
