--- a/man/fuse.1
+++ b/man/fuse.1
@@ -4306,7 +4306,7 @@ evaluates true. If
 is omitted, it defaults to the current value of PC.
 .RE
 .PP
-br{eakpoint} p{ort} (r{ead}|w{rite})
+br{eakpoint} p{ort} (re{ad}|w{rite})
 .IR port " [if " condition ]
 .RS
 Set a breakpoint to trigger whenever IO port
@@ -4316,7 +4316,7 @@ is read from or written to and
 evaluates true.
 .RE
 .PP
-br{eakpoint} (r{ead}|w{rite})
+br{eakpoint} (re{ad}|w{rite})
 .RI [ address "] [if " condition ]
 .RS
 Set a breakpoint to trigger whenever memory location
