--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2017-03-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2017-03-07  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.3.4 released.
 
