--- a/README
+++ b/README
@@ -108,4 +108,4 @@ Usenet newsgroup `comp.sys.sinclair' or the World of Spectrum forums
 <http://www.worldofspectrum.org/forums/>.
 
 Philip Kendall <philip-fuse@shadowmagic.org.uk>
-31st January, 2017
+7th March, 2017
