--- a/man/fuse.1
+++ b/man/fuse.1
@@ -23,7 +23,7 @@
 .\" E-mail: philip-fuse@shadowmagic.org.uk
 .\"
 .\"
-.TH fuse 1 "31st January, 2017" "Version 1.3.4" "Emulators"
+.TH fuse 1 "7th March, 2017" "Version 1.3.4" "Emulators"
 .\"
 .\"------------------------------------------------------------------
 .\"
