Fix typo in LOG disk format

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -5097,8 +5097,8 @@ was compiled, than Fuse will try to create UDI images with compressed
 tracks to save disk space.
 There is a
 .I .LOG
-`image' format for debugging purpose. This is a plain text file
-contains three dump of the loaded disk image at different details.
+`image' format for debugging purpose. This is a plain text file that
+contains three dumps of the loaded disk image at different details.
 Not all image formats can store all disk images.
 You cannot save a disk image with an inappropriate format
 that loses some information (e.g. variable track length or
