--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2017-04-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+
+        * Fuse 1.3.5 released.
+
+        * Emulation core improvements:
+          * Fix typo in LOG disk format (Sergio Baldoví).
+
+        * Miscellaneous improvements:
+          * Replace old ticket numbers from Trac to Allura (Sergio Baldoví).
+          * Replace misplaced tabs (Sergio Baldoví).
+          * WidgetUI: Fix memory leak in file selector (thanks, clang) (Sergio
+            Baldoví).
+          * Fix allocator sizeof operand mismatch and remove dead assignment
+            (Sergio Baldoví).
+          * Remove prototypes of old plus3 disk functions (thanks, Andre
+            Leiradella) (Sergio Baldoví).
+          * Increase allocated memory to keep GCC7 happy (Sergio Baldoví).
+
 2017-03-07  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.3.4 released.
