--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,13 @@
-2017-04-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2017-04-28  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.3.5 released.
 
         * Emulation core improvements:
           * Disable tape traps when playing/recording RZX files (thanks,
             windale) (Sergio Baldoví).
-          * Fix typo in LOG disk format (Sergio Baldoví).
 
         * Miscellaneous improvements:
+          * Fix typo in LOG disk format (Sergio Baldoví).
           * Replace old ticket numbers from Trac to Allura (Sergio Baldoví).
           * WidgetUI: Fix memory leak in file selector (thanks, clang) (Sergio
             Baldoví).
