Add Covox interface emulation

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -209,6 +209,14 @@ to disable). This option is the same as the General Options dialog's
 option.
 .RE
 .PP
+.B \-\-covox
+.RS
+Emulate a Covox sound interface for Pentagon/Scorpion. Same as the
+General Peripherals Options dialog's
+.I "Covox"
+option.
+.RE
+.PP
 .B \-\-debugger\-command
 .I string
 .RS
@@ -2536,6 +2544,14 @@ If this option is selected, Fuse will emulate a Currah \(mcSource interface.
 See the World of Spectrum Infoseek web page at
 .I http://www.worldofspectrum.org/infoseekid.cgi?id=1000080
 for the manual.
+.RE
+.PP
+.I "Covox interface"
+.RS
+If this option is selected, Fuse will emulate a Covox digital sound
+interface. This emulation is only available for the Pentagon, Pentagon 512k,
+Pentagon 1024k and Scorpion machines. The Pentagon variants use port 0xfb and
+the Scorpion version uses port 0xdd.
 .RE
 .RE
 .PP
