Document --volume-covox option and update bash completion

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -1755,6 +1755,15 @@ Same as the Sound Options dialog's
 option.
 .RE
 .PP
+.B \-\-volume\-covox
+.I volume
+.RS
+Sets the relative volume of the Covox from a range of 0\(en100%.
+Same as the Sound Options dialog's
+.I "Covox volume"
+option.
+.RE
+.PP
 .B \-\-volume\-specdrum
 .I volume
 .RS
@@ -2396,6 +2405,11 @@ Sets the relative volume of the AY-3-8912 chip from a range of 0\(en100%.
 .I "Beeper volume"
 .RS
 Sets the relative volume of the beeper from a range of 0\(en100%.
+.RE
+.PP
+.I "Covox volume"
+.RS
+Sets the relative volume of the Covox from a range of 0\(en100%.
 .RE
 .PP
 .I "SpecDrum volume"
