--- a/README
+++ b/README
@@ -24,11 +24,13 @@ What Fuse does have:
 * Emulation of some of the printers you could attach to a Spectrum.
 * Support for the RZX input recording file format, including
   rollback and 'competition mode'.
-* Emulation of the Covox, Currah µSource, DivIDE, Fuller audio box, Interface 1,
-  Kempston mouse, SpecDrum, Spectrum +3e, ZXATASP and ZXCF interfaces.
-* Emulation of the Beta 128, +D, Didaktik 80/40, DISCiPLE and Opus Discovery
+* Emulation of the Currah µSource, DivIDE, Interface 1, Kempston mouse,
+  Spectrum +3e, ZXATASP and ZXCF interfaces.
+* Emulation of the Covox, Fuller audio box, Melodik and SpecDrum audio
   interfaces.
-* Emulation of the Spectranet and SpeccyBoot interfaces.
+* Emulation of the Beta 128, +D, Didaktik 80/40, DISCiPLE and Opus Discovery
+  disk interfaces.
+* Emulation of the Spectranet and SpeccyBoot network interfaces.
 
 Help! <xyz> doesn't work
 ------------------------
