Update description of speed option.

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -2138,7 +2138,7 @@ Set how fast Fuse will attempt to emulate the Spectrum, as a
 percentage of the speed at which the real machine runs. If your
 machine isn't fast enough to keep up with the requested speed, Fuse
 will just run as fast as it can. Note that if the emulation speed is
-not exactly 100%, no sound output will be produced.
+faster than 500%, no sound output will be produced.
 .RE
 .PP
 .I "Frame rate"
