Sort Multiface roms and rename Multiface +3 to Multiface 3

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -1228,7 +1228,7 @@ the Multiface\ One ROM
 the Multiface\ 128 ROM
 .RI ( mf128.rom ),
 the Multiface\ 3 ROM
-.RI ( mfplus3.rom ),
+.RI ( mf3.rom ),
 the Opus Discovery ROM
 .RI ( opus.rom ),
 the SpeccyBoot ROM
