Fix typo in Opus Discovery option (thanks, Stuart)

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -891,7 +891,8 @@ section.
 .PP
 .B \-\-opus
 .RS
-Emulate a Opus Discovery interface. Same as the Disk Peripherals Options dialog's
+Emulate an Opus Discovery interface. Same as the Disk Peripherals Options
+dialog's
 .I "Opus Discovery interface"
 option.
 .RE
