--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2017-06-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2017-06-01  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.3.6 released.
 
