--- a/README
+++ b/README
@@ -110,4 +110,4 @@ Usenet newsgroup `comp.sys.sinclair' or the World of Spectrum forums
 <http://www.worldofspectrum.org/forums/>.
 
 Philip Kendall <philip-fuse@shadowmagic.org.uk>
-28th April, 2017
+1st June, 2017
