Rename --multiface-stealth option to --multiface1-stealth
Is more descriptive as it's only available for Multiface One.

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -913,11 +913,11 @@ Peripherals Options dialog's
 option.
 .RE
 .PP
-.B \-\-multiface-stealth
+.B \-\-multiface1-stealth
 .RS
 Set Multiface One stealth/invisible mode. Same as the General Peripherals
 Options dialog's
-.I "Stealth Multiface"
+.I "Stealth Multiface One"
 option.
 .RE
 .PP
@@ -2569,7 +2569,7 @@ If this option is selected, Fuse will emulate the Romantic Robot
 Multiface\ 3. Available for +2A, +3 and +3e machines.
 .RE
 .PP
-.I "Stealth Multiface"
+.I "Stealth Multiface One"
 .RS
 This option controls the `invisible' or `stealth' mode of Multiface One,
 as the physical switch on the side of the interface.
