Document Multiface RAM/ROM memory sources

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -4761,6 +4761,8 @@ Other available sources are:
 .RI ` "DivIDE RAM" "',"
 .RI ` If1 "',"
 .RI ` If2 "',"
+.RI ` "Multiface RAM" "',"
+.RI ` "Multiface ROM" "',"
 .RI ` "Opus RAM" "',"
 .RI ` "Opus ROM" "',"
 .RI ` "PlusD RAM" "',"
