--- a/README
+++ b/README
@@ -25,7 +25,7 @@ What Fuse does have:
 * Support for the RZX input recording file format, including
   rollback and 'competition mode'.
 * Emulation of the Currah µSource, DivIDE, Interface 1, Kempston mouse,
-  Spectrum +3e, ZXATASP and ZXCF interfaces.
+  Multiface One/128/3, Spectrum +3e, ZXATASP and ZXCF interfaces.
 * Emulation of the Covox, Fuller audio box, Melodik and SpecDrum audio
   interfaces.
 * Emulation of the Beta 128, +D, Didaktik 80/40, DISCiPLE and Opus Discovery
