Correct the list of machines for Multiface One

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -2572,8 +2572,8 @@ unpredictable behaviour will occur.
 .PP
 .I "Multiface One"
 .RS
-If this option is selected, Fuse will emulate the Romantic Robot
-Multiface One. Available for 16K, 48K, Timex TC2048, 128K, +2 and SE machines.
+If this option is selected, Fuse will emulate the Romantic Robot Multiface\ One.
+Available for 16K, 48K and Timex TC2048 machines.
 .RE
 .PP
 .I "Multiface\ 128"
