--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2017-07-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2017-07-31  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * Fuse 1.3.8 released.
 
