--- a/README
+++ b/README
@@ -111,4 +111,4 @@ Usenet newsgroup `comp.sys.sinclair' or the World of Spectrum forums
 <http://www.worldofspectrum.org/forums/>.
 
 Philip Kendall <philip-fuse@shadowmagic.org.uk>
-2nd July, 2017
+31st July, 2017
